--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,17 +6,17 @@ services:
     ports:
       - "6379:6379"
 
-  suburb:
-    image: suburb
-    build:
-      context: .
-      dockerfile: ./Dockerfile
-    depends_on:
-      - valkey
-    ports:
-      - "7777:8080"
-    environment:
-      - PORT=8080
-      - VALKEY_PORT=6379
-      - VALKEY_HOST=valkey
-      - API_SECRET=secret123
+  # suburb:
+  #   image: suburb
+  #   build:
+  #     context: .
+  #     dockerfile: ./Dockerfile
+  #   depends_on:
+  #     - valkey
+  #   ports:
+  #     - "7777:8080"
+  #   environment:
+  #     - PORT=8080
+  #     - VALKEY_PORT=6379
+  #     - VALKEY_HOST=valkey
+  #     - API_SECRET=secret123
