--- a/gleam.toml
+++ b/gleam.toml
@@ -21,6 +21,10 @@ gleam_http = ">= 3.6.0 and < 4.0.0"
 gleam_json = ">= 1.0.1 and < 2.0.0"
 mist = ">= 1.2.0 and < 2.0.0"
 envoy = ">= 1.0.1 and < 2.0.0"
+glint = ">= 1.0.0 and < 2.0.0"
+argv = ">= 1.0.2 and < 2.0.0"
+gleam_hackney = ">= 1.2.0 and < 2.0.0"
+gleam_httpc = ">= 2.2.0 and < 3.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
