--- a/gleam.toml
+++ b/gleam.toml
@@ -14,7 +14,6 @@ version = "1.0.0"
 
 [dependencies]
 gleam_stdlib = ">= 0.34.0 and < 2.0.0"
-radish = ">= 0.15.0 and < 1.0.0"
 gleam_erlang = ">= 0.25.0 and < 1.0.0"
 wisp = ">= 0.15.0 and < 1.0.0"
 gleam_http = ">= 3.6.0 and < 4.0.0"
@@ -23,8 +22,8 @@ mist = ">= 1.2.0 and < 2.0.0"
 envoy = ">= 1.0.1 and < 2.0.0"
 glint = ">= 1.0.0 and < 2.0.0"
 argv = ">= 1.0.2 and < 2.0.0"
-gleam_hackney = ">= 1.2.0 and < 2.0.0"
 gleam_httpc = ">= 2.2.0 and < 3.0.0"
+sqlight = ">= 0.9.0 and < 1.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
