--- a/gleam.toml
+++ b/gleam.toml
@@ -24,6 +24,7 @@ glint = ">= 1.0.0 and < 2.0.0"
 argv = ">= 1.0.2 and < 2.0.0"
 gleam_httpc = ">= 2.2.0 and < 3.0.0"
 sqlight = ">= 0.9.0 and < 1.0.0"
+term_size = ">= 1.0.1 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
