--- a/gleam.toml
+++ b/gleam.toml
@@ -26,6 +26,7 @@ sqlight = ">= 0.9.0 and < 1.0.0"
 term_size = ">= 1.0.1 and < 2.0.0"
 wisp = ">= 0.15.0 and < 1.0.0"
 simplifile = ">= 2.0.1 and < 3.0.0"
+filepath = ">= 1.0.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
