--- a/gleam.toml
+++ b/gleam.toml
@@ -27,6 +27,7 @@ term_size = ">= 1.0.1 and < 2.0.0"
 wisp = ">= 0.15.0 and < 1.0.0"
 simplifile = ">= 2.0.1 and < 3.0.0"
 filepath = ">= 1.0.0 and < 2.0.0"
+gleam_otp = ">= 0.10.0 and < 1.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
